Mon Feb  1 13:09:50 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Deliver/SMTP.pm (senddata): Don't print anything to the
 	debug log.

	* lib/Mj/Resend.pm (_add_fters): Take a hashref of substitutions
 	and apply them to the fronters/footers before adding.
	(_post): Pass a set of substitutions to _add_fters.

	* bin/mj_resend: Don't include mailbox separator in messages sent
 	to post().

	* lib/Mj/Resend.pm (_ck_tbody_line): Comment out logging; too much
 	verbosity.

	* lib/Mj/Config.pm (parse_attachment_rules): Properly output code
 	for 'deny' action.

Sun Jan 31 16:34:54 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Format.pm (who): Add 'short' mode that just prints the
 	address lists.

	* lib/Mj/Resend.pm (_post): Remove debugging prints.

	* lib/Majordomo.pm (_list_file_get): Big changes; take a hashref
 	to be used as substitutions and call substitute_vars automatically
 	if necessary.
	(substitute_vars): Support the $INCLUDE expansion; take a filename
 	to include and other variables necessary to support a recursive
 	call.

	* lib/mj_cf_data.pl: digest_index_format wasilko renamed to
 	subject_author.

	* lib/Majordomo.pm (get_done): Clean up temporaries.
	(help_start): Call _list_file_get with new arguments to handle
 	substitution internally.

	* lib/Mj/FileSpace.pm (get): Check wantarray status and return
 	just the filename if in a scalar context.

	* lib/Mj/Resend.pm (_post): Adjust for new arguments to
 	list_file_get.  (This is the only place where this is needed.)

Sat Jan 30 15:21:12 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* *: Redo all calls to sub_vars, sub_vars_string to pass the subs
 	hash by reference.
	
	* lib/Majordomo.pm (substitute_vars, substitute_vars_string): Take
 	the subs hash by reference.

	* lib/Mj/Resend.pm (_post): Don't increment issue numbers for all
 	digests, only the digests we're sending out.  Avoid doing any
 	digest processing if we have no digests to send.
